--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -11,7 +11,7 @@
 */
 body {
   padding: 0 0 30px 0;
-  background-color: #fafafa;
+  background-color: #ffffff;
   letter-spacing: -0.3px;
   color: rgba(0, 0, 0, 0.65);
   font-size: 14px;
@@ -44,7 +44,7 @@ body {
   padding: 33px 20px;
 }
 .layout-dashboard .ant-layout-sider.sider-primary .brand img {
-  height: 30px;
+  height: 100px;
 }
 .layout-dashboard .ant-layout-sider.sider-primary hr {
   margin: 18px 0;
@@ -155,7 +155,7 @@ body {
 .layout-dashboard .ant-layout-sider.sider-primary .ant-menu-item a,
 .layout-dashboard .ant-layout-sider.sider-primary .ant-menu-submenu a {
   padding: 10px 16px;
-  color: #141414;
+  color: #000000;
   border-radius: 8px;
   display: flex;
   align-items: center;
@@ -172,7 +172,7 @@ body {
   .ant-menu-item
   .active
   .icon {
-  background-color: #1890ff;
+  background-color: #ff7d98;
 }
 .layout-dashboard
   .ant-layout-sider.sider-primary
@@ -190,7 +190,7 @@ body {
   .ant-menu-submenu
   .active
   .icon {
-  background-color: #1890ff;
+  background-color: #ff7d98;
 }
 
 .layout-dashboard .ant-layout-sider.sider-primary .ant-menu-item .icon,
@@ -240,7 +240,7 @@ body {
 
 .layout-dashboard .ant-layout-sider.sider-primary .ant-menu-item a:hover,
 .layout-dashboard .ant-layout-sider.sider-primary .ant-menu-submenu a:hover {
-  color: #141414;
+  color: #000000;
 }
 
 .layout-dashboard
@@ -272,13 +272,13 @@ body {
 .layout-dashboard
   .ant-layout-sider.sider-primary.ant-layout-sider-primary
   .footer-box {
-  background-color: #1890ff;
+  background-color: #ff7d98;
   color: #fff;
   box-shadow: none;
 }
 .layout-dashboard .ant-layout-sider.sider-primary .footer-box {
   background-color: #fff;
-  color: #141414;
+  color: #000000;
   padding: 16px;
   border-radius: 8px;
   box-shadow: 0 20px 27px rgb(0 0 0 / 5%);
@@ -300,7 +300,7 @@ body {
   justify-content: center;
   align-items: center;
   margin-bottom: 15px;
-  background-color: #1890ff;
+  background-color: #ff7d98;
 }
 
 .layout-dashboard
@@ -312,14 +312,14 @@ body {
 .layout-dashboard .ant-layout-sider.sider-primary .footer-box h6 {
   font-weight: 600;
   font-size: 16px;
-  color: #141414;
+  color: #000000;
   margin-bottom: 0;
 }
 .layout-dashboard
   .ant-layout-sider.sider-primary.ant-layout-sider-primary
   .footer-box
   p {
-  color: #f5f5f5;
+  color: #ffffff;
 }
 .layout-dashboard .ant-layout-sider.sider-primary .footer-box p {
   color: #8c8c8c;
@@ -332,7 +332,7 @@ body {
   button {
   background-color: #fff;
   border-color: #f0f0f0;
-  color: #141414;
+  color: #000000;
 }
 
 .layout-dashboard .ant-layout-sider.sider-primary .footer-box button {
@@ -397,7 +397,7 @@ body {
   color: #8c8c8c;
 }
 .layout-dashboard .ant-breadcrumb > span:last-child .ant-breadcrumb-link {
-  color: #141414;
+  color: #000000;
 }
 .layout-dashboard .ant-page-header-heading {
   margin-top: 0;
@@ -442,7 +442,7 @@ body {
   .ant-avatar {
   width: 36px;
   height: 36px;
-  background-color: #fafafa;
+  background-color: #ffffff;
   box-shadow: 0 4px 6px rgb(0 0 0 / 12%);
   display: flex;
   justify-content: center;
@@ -499,7 +499,7 @@ body {
 h3,
 h4 {
   font-weight: 700;
-  color: #141414;
+  color: #000000;
 }
 
 .ant-list-item-meta-title > a {
@@ -532,7 +532,7 @@ h4 {
 }
 
 .layout-dashboard .header-control svg path {
-  fill: #141414;
+  fill: #000000;
 }
 
 .layout-dashboard .header-control .btn-sign-in {
@@ -569,7 +569,7 @@ h4 {
   margin: 18px 0;
   border: none;
   height: 1px;
-  background-color: #f5f5f5;
+  background-color: #ffffff;
 }
 
 .settings-drawer .drawer-content > h6 {
@@ -578,7 +578,7 @@ h4 {
 }
 .layout-dashboard .settings-drawer .drawer-content h6 {
   font-weight: 600;
-  color: #141414;
+  color: #000000;
 }
 .settings-drawer .drawer-content p {
   color: #8c8c8c;
@@ -673,7 +673,7 @@ ul.ant-menu.ant-menu-root.ant-menu-inline.ant-menu-light.left-nav li {
   margin: 0px;
   border: 0px;
   font-size: 16px;
-  color: #141414;
+  color: #000000;
 }
 
 ul.ant-menu.ant-menu-root.ant-menu-inline.ant-menu-light.left-nav
@@ -721,7 +721,7 @@ ul.ant-menu.ant-menu-root.ant-menu-inline.ant-menu-light.left-nav
 ul.ant-menu.ant-menu-root.ant-menu-inline.ant-menu-light.left-nav
   li.ant-menu-item-selected
   span.anticon {
-  background: #1890ff;
+  background: #ff7d98;
   color: #fff;
 }
 
@@ -736,7 +736,7 @@ ul.ant-menu.ant-menu-root.ant-menu-inline.ant-menu-light.left-nav
 ul.ant-menu.ant-menu-root.ant-menu-inline.ant-menu-light.left-nav
   li:hover
   span.anticon {
-  background: #1890ff;
+  background: #ff7d98;
   color: #fff;
 } */
 
@@ -765,7 +765,7 @@ ul.ant-menu.ant-menu-root.ant-menu-inline.ant-menu-light.left-nav
   box-shadow: 0px 4px 6px #0000001f;
   border-radius: 6px;
   font-size: 19px;
-  background: #1890ff;
+  background: #ff7d98;
   color: #fff;
   direction: ltr;
   margin-bottom: 15px;
@@ -782,7 +782,7 @@ ul.ant-menu.ant-menu-root.ant-menu-inline.ant-menu-light.left-nav
   margin-top: 15px;
 }
 .ant-layout {
-  background: #fafafa;
+  background: #ffffff;
 }
 .pageheader {
   display: flex;
@@ -798,7 +798,9 @@ ul.ant-menu.ant-menu-root.ant-menu-inline.ant-menu-light.left-nav
 
 .signin {
   white-space: nowrap;
-  margin: 0px 20px;
+  /* margin: 0px 20px; */
+  width: 100%;
+  /* height: 700px; */
 }
 
 .signin span.ant-avatar {
@@ -867,7 +869,7 @@ button.ant-btn.bell strong {
   display: inline-block;
   width: 20px;
   height: 20px;
-  background: #f5222d;
+  background: #ff4373;
   border-radius: 100%;
   text-align: center;
   line-height: normal;
@@ -921,11 +923,11 @@ button.ant-btn.bell strong {
 }
 .list-notifaction .ant-list-item-meta-title {
   font-weight: bold;
-  color: #141414;
+  color: #000000;
 }
 .list-notifaction .ant-list-item-meta-title {
   font-weight: bold;
-  color: #141414;
+  color: #000000;
 }
 
 .list-notifaction .ant-avatar.ant-avatar-circle {
@@ -966,7 +968,7 @@ button.ant-btn.bell strong {
   width: 48px;
   height: 48px;
   text-align: center;
-  background: #1890ff;
+  background: #ff7d98;
   color: #fff;
   border-radius: 0.5rem;
   margin-left: auto;
@@ -983,7 +985,7 @@ button.ant-btn.bell strong {
 }
 .bar-chart {
   background: transparent
-    linear-gradient(62deg, #00369e 0%, #005cfd 53%, #a18dff 100%) 0% 0%
+    linear-gradient(62deg, #d20035 0%, #ff88a0 53%, #ffdc84 100%) 0% 0%
     no-repeat padding-box;
   box-shadow: 0px 4px 6px #0000001f;
 
@@ -1030,11 +1032,11 @@ button.ant-btn.bell strong {
 }
 
 .sales ul li:first-child span.anticon {
-  color: #b37feb;
+  color: #ffdc84;
 }
 
 .sales ul li:last-child span.anticon {
-  color: #1890ff;
+  color: #ff7d98;
 }
 .sales ul li {
   color: #8c8c8c;
@@ -1047,23 +1049,23 @@ button.ant-btn.bell strong {
   margin: 0px;
   font-size: 16px;
   font-weight: bold;
-  color: #141414;
+  color: #000000;
 }
 
 span.blue {
   margin-left: 5px;
-  color: #1890ff;
+  color: #ff7d98;
   font-weight: 600;
 }
 .project-ant h5 {
   margin: 0px;
-  color: #141414;
+  color: #000000;
   font-weight: 700;
 }
 
 span.blue {
   margin-left: 5px;
-  color: #1890ff;
+  color: #ff7d98;
   font-weight: 600;
 }
 .project-ant {
@@ -1091,12 +1093,12 @@ span.blue {
 }
 
 .antd-pro-pages-dashboard-analysis-style-salesExtra a:hover {
-  color: #1890ff;
-  border: 1px solid #1890ff;
+  color: #ff7d98;
+  border: 1px solid #ff4373;
 }
 .antd-pro-pages-dashboard-analysis-style-salesExtra a.active {
-  color: #1890ff;
-  border: 1px solid #1890ff;
+  color: #ff7d98;
+  border: 1px solid #ff4373;
 }
 
 .ant-list-box th {
@@ -1179,14 +1181,14 @@ span.blue {
 } */
 
 .percent-progress .ant-progress-status-exception .ant-progress-text {
-  color: #ff4d4f;
+  color: #ff4373;
 }
 .ant-full-box {
   width: 100%;
   border: 1px dashed #d9d9d9;
   padding: 10px;
   height: auto;
-  color: #141414;
+  color: #000000;
   border-radius: 10px;
 }
 .uploadfile {
@@ -1226,7 +1228,7 @@ span.blue {
   font-size: 20px;
 }
 .bg-gradient-primary {
-  background-image: linear-gradient(310deg, #2152ff, #21d4fd);
+  background-image: linear-gradient(310deg, #ff4373, #ffdc84);
 }
 img {
   max-width: 100%;
@@ -1241,11 +1243,11 @@ img {
   margin-bottom: 3rem !important;
 }
 .icon-move-right .anticon-right {
-  color: #40a9ff;
+  color: #ff4373;
   margin-left: 2px;
 }
 .icon-move-right {
-  color: #1890ff;
+  color: #ff7d98;
 
   display: block;
 }
@@ -1282,12 +1284,12 @@ img {
   margin-top: 7px;
 }
 .copyright .anticon-heart {
-  color: #f5222d;
+  color: #ff4373;
   margin: 0px 5px;
 }
 .copyright a {
   margin: 0px 5px;
-  color: #141414;
+  color: #000000;
   font-weight: 700;
 }
 .footer-menu ul {
@@ -1445,7 +1447,7 @@ span.ismobile {
   border-radius: 0em 0.25em 0.25em 0em;
   border: 1px solid #ddddde;
   border-left: 0px;
-  color: #141414;
+  color: #000000;
 }
 
 .viewstar a:first-child {
@@ -1575,7 +1577,7 @@ ul.ant-menu.ant-menu-root.ant-menu-inline.ant-menu-light.left-nav
 .ant-table-tbody > tr > td h5 {
   font-size: 14px;
   font-weight: 600;
-  color: #141414;
+  color: #000000;
   margin-bottom: 0px;
 }
 .ant-table-tbody > tr > td p {
@@ -1874,7 +1876,7 @@ body {
   text-align: center;
   font-size: 20px;
   font-weight: 600;
-  color: #141414;
+  color: #000000;
   margin: 0px;
 }
 .header-solid .ant-card-head {
@@ -1920,7 +1922,7 @@ body {
   font-weight: 700;
 }
 .text-dark {
-  color: #141414;
+  color: #000000;
 }
 .ant-btn,
 .ant-radio-group .ant-radio-button-wrapper {
@@ -2011,7 +2013,7 @@ body {
   vertical-align: middle;
 }
 .layout-default .ant-layout-footer .menu-nav-social a:hover svg {
-  fill: #1890ff;
+  fill: #ff7d98;
 }
 .layout-default .ant-layout-footer .copyright a {
   color: inherit;
@@ -2022,7 +2024,7 @@ body {
   display: flex;
   position: relative;
   background-color: #fff;
-  color: #141414;
+  color: #000000;
   box-shadow: 0 20px 27px rgb(0 0 0 / 5%);
   flex-direction: row;
   padding: 0 50px;
@@ -2035,7 +2037,7 @@ body {
 .layout-default .ant-layout-header .header-brand h5 {
   white-space: nowrap;
 
-  color: #141414;
+  color: #000000;
   margin: 0;
 }
 .layout-default .ant-layout-header .header-nav a svg {
@@ -2046,7 +2048,7 @@ body {
   vertical-align: middle;
 }
 .layout-default .ant-layout-header .header-nav a {
-  color: #141414;
+  color: #000000;
   padding: 6px 12px;
   font-weight: 400;
 }
@@ -2114,7 +2116,7 @@ body {
 .signin h1 {
   font-size: 48px;
   font-weight: 700;
-  color: #141414;
+  color: #000000;
 }
 
 .signin h5 {
@@ -2136,13 +2138,13 @@ body {
 .ant-row.ant-form-item.username .ant-col.ant-form-item-label {
   font-size: 13px;
   font-weight: 600;
-  color: #141414;
+  color: #000000;
 }
 .signin .ant-form-item-control-input button.ant-switch {
   margin-right: 5px;
 }
 .text-dark {
-  color: #141414;
+  color: #000000;
 }
 .sign-img img {
   width: 100%;
@@ -2215,7 +2217,7 @@ button.ant-btn.bell strong {
   display: inline-block;
   width: 18px;
   height: 18px;
-  background: #f5222d;
+  background: #ff4373;
   border-radius: 100%;
   text-align: center;
   line-height: normal;
@@ -2243,7 +2245,7 @@ button.ant-btn.bell strong {
 .ant-table-tbody > tr > td h6 {
   font-size: 14px;
   font-weight: 600;
-  color: #141414;
+  color: #000000;
 }
 
 .layout-dashboard .header-control .header-search input.ant-input {
@@ -2251,7 +2253,7 @@ button.ant-btn.bell strong {
 }
 
 small.redtext {
-  color: red;
+  color: #ff7d98;
 }
 
 .full-width path {
@@ -2333,7 +2335,7 @@ section.ant-layout.layout-content .ant-layout-content.content-ant {
   width: 64px;
   height: 64px;
   margin: auto;
-  background-color: #1890ff;
+  background-color: #ff7d98;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgb(0 0 0 / 12%);
   display: flex;
@@ -2416,7 +2418,7 @@ section.ant-layout.layout-content .ant-layout-content.content-ant {
 .payment-method-card.ant-card h6 {
   font-weight: 600;
   margin-bottom: 0;
-  color: #141414;
+  color: #000000;
 }
 .m-0 {
   margin: 0px;
@@ -2441,7 +2443,7 @@ section.ant-layout.layout-content .ant-layout-content.content-ant {
 .transactions-list .ant-list-item-meta-title {
   font-size: 14px;
   font-weight: 600;
-  color: #141414;
+  color: #000000;
 }
 
 .invoice-list .ant-list-item-meta-description,
@@ -2454,7 +2456,7 @@ section.ant-layout.layout-content .ant-layout-content.content-ant {
 .invoice-list .ant-list-item-action .ant-btn,
 .transactions-list .ant-list-item-action .ant-btn {
   font-weight: 600;
-  color: #141414;
+  color: #000000;
   box-shadow: none;
 }
 
@@ -2471,19 +2473,19 @@ section.ant-layout.layout-content .ant-layout-content.content-ant {
 
 .card-billing-info.ant-card {
   box-shadow: none;
-  background-color: #fafafa;
+  background-color: #ffffff;
   border: 1px solid #f5f5f5;
 }
 
 .ant-descriptions .ant-descriptions-title {
   font-size: 14px;
   font-weight: 600;
-  color: #141414;
+  color: #000000;
   margin-bottom: 14px;
 }
 
 .fill-danger {
-  fill: #ff4d4f;
+  fill: #ff4373;
 }
 .card-billing-info.ant-card .darkbtn {
   color: #8c8c8c;
@@ -2514,13 +2516,13 @@ section.ant-layout.layout-content .ant-layout-content.content-ant {
 .ant-descriptions .ant-descriptions-item-content {
   font-size: 13px;
   font-weight: 600;
-  color: #141414;
+  color: #000000;
 }
 
 .ant-descriptions .ant-descriptions-title {
   font-size: 14px;
   font-weight: 600;
-  color: #141414;
+  color: #000000;
   margin-bottom: 14px;
 }
 
@@ -2691,7 +2693,7 @@ section.ant-layout.ant-layout-has-sider.layout-dashboard.layout-profile
 }
 .settings-list > li span {
   margin-left: 16px;
-  color: #141414;
+  color: #000000;
 }
 .ant-btn-link {
   box-shadow: none;
@@ -2883,7 +2885,7 @@ section.ant-layout.ant-layout-has-sider.layout-dashboard.layout-profile
   direction: ltr;
 }
 .ant-list-box table tr:hover td {
-  background: #fafafa;
+  background: #ffffff;
 }
 .layout-dashboard-rtl .icon-box {
   margin-left: 0px;
@@ -3033,9 +3035,9 @@ button.ant-btn.ant-btn-dashed.ant-full-box svg {
 
 .ant-btn-dashed.active,
 .ant-btn-dashed:active {
-  color: #096dd9;
+  color: #ff7d98;
   background-color: #fff;
-  border-color: #096dd9;
+  border-color: #ff7d98;
 }
 
 section.ant-layout.ant-layout-has-sider.layout-dashboard.layout-profile
