--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -798,13 +798,14 @@ ul.ant-menu.ant-menu-root.ant-menu-inline.ant-menu-light.left-nav
 
 .signin {
   white-space: nowrap;
+  margin-top: 150px;
   /* margin: 0px 20px; */
   width: 100%;
   /* height: 700px; */
 }
 
 .signin span.ant-avatar {
-  margin-right: 9px;
+  /* margin-right: 9px; */
 }
 
 .shadow-lg {
